<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.fragment.AccountFragment">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/login_back_button"
            android:padding="6dp"
            android:scaleType="fitStart"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />

        <TextView
            android:id="@+id/bottomsheet_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/mini"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/loginConstraint"
            app:layout_constraintEnd_toStartOf="@+id/bottomsheet_user_url"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_button"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/bottomsheet_user_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flux"
            android:textColor="?attr/colorPrimary"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/bottomsheet_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bottomsheet_username" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottomsheet_username">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/urlTextInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@+id/usernameTextInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/urlEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/url"
                    android:inputType="textEmailSubject"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameTextInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@+id/paswordTextInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/urlTextInput"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/username"
                    android:inputType="textEmailSubject"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/paswordTextInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/progressBar_loading_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameTextInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/password"
                    android:inputType="textWebPassword"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:visibility="visible"
                app:icon="@drawable/ic_arrow_forward"
                app:iconGravity="end"
                app:layout_constraintBottom_toBottomOf="@+id/progressBar_loading_login"
                app:layout_constraintEnd_toEndOf="@+id/paswordTextInput"
                app:layout_constraintStart_toEndOf="@+id/deleteButton"
                app:layout_constraintTop_toTopOf="@+id/progressBar_loading_login" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/progressBar_loading_login"
                app:layout_constraintEnd_toStartOf="@+id/loginButton"
                app:layout_constraintStart_toStartOf="@+id/paswordTextInput"
                app:layout_constraintTop_toTopOf="@+id/progressBar_loading_login" />

            <ProgressBar
                android:id="@+id/progressBar_loading_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:visibility="invisible"
                android:theme="@style/ProgressBarAndSwitch"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/paswordTextInput"
                app:layout_constraintStart_toStartOf="@+id/paswordTextInput"
                app:layout_constraintTop_toBottomOf="@+id/paswordTextInput" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/connectivityErrorWorning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_connectivity_error"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/loginConstraint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottomsheet_username" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
